Optimizing Footer Improve in Dark mode for postListing Correcting LinkedIn link form post

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer-container {
   max-width: $width;
-  padding: 0 1.5rem;
+  //padding: 0 1.5rem;
   margin-left: auto;
   margin-right: auto;
   background-color: $primary-color;
