--- a/src/styles/base/dark.scss
+++ b/src/styles/base/dark.scss
@@ -105,8 +105,7 @@
         &:hover,
         &:active,
         &:focus {
-          background: black;
-          color: white;
+          background: darken(gray, 15%);
         }
       }
 
